@@ -1,2 +1,2 @@
 @echo off
-java -Xmx200m -cp "..\runtime\lbPatch.jar;..\runtime\lbRuntime.jar" org.lexevs.dao.index.operation.tools.CleanUpLuceneIndexLauncher %*
+java -Xmx800m -XX:PermSize=256m -cp "..\runtime\lbPatch.jar;..\runtime\lbRuntime.jar" org.lexevs.dao.index.operation.tools.CleanUpLuceneIndexLauncher %*
